--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "kong0107",
   "license": "ISC",
   "dependencies": {
+    "chinese-parseint": "^1.0.0",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "jade": "^1.11.0",
