--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "twLaw",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Web Server for Taiwan Law",
   "keywords": [
     "taiwan",
     "law"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kong0107/twLaw.git"
+  },
   "author": "kong0107",
   "license": "ISC",
   "dependencies": {
-    "chinese-parseint": "^1.0.0",
+    "chinese-parseint": "^1.1.0",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "jade": "^1.11.0",
